--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "agenda-cotad": "file:",
     "axios": "^1.7.2",
     "expo": "~51.0.12",
+    "expo-checkbox": "^3.0.0",
     "expo-font": "~12.0.8",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.16",
@@ -40,6 +41,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.10",
     "yup": "^1.4.0"
   },
