--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@hookform/resolvers": "^3.9.0",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.0.2",
     "agenda-cotad": "file:",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "expo": "~51.0.12",
     "expo-checkbox": "^3.0.0",
     "expo-font": "~12.0.8",
