--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.0.2",
     "agenda-cotad": "file:",
     "axios": "^1.7.7",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.12",
     "expo-checkbox": "^3.0.0",
     "expo-font": "~12.0.8",
