--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "expo": "~51.0.12",
+    "expo-auth-session": "^5.5.2",
     "expo-checkbox": "^3.0.0",
     "expo-font": "~12.0.8",
     "expo-linking": "~6.3.1",
@@ -40,6 +41,7 @@
     "react-native": "0.74.2",
     "react-native-calendars": "^1.1305.0",
     "react-native-check-box": "^2.1.7",
+    "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
