--- a/package.json
+++ b/package.json
@@ -16,36 +16,37 @@
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@hookform/resolvers": "^3.9.0",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^8.2.0",
-    "@react-native-picker/picker": "^2.7.7",
-    "@react-navigation/native": "^6.0.2",
+    "@react-native-picker/picker": "2.9.0",
+    "@react-navigation/native": "^7.0.14",
     "agenda-cotad": "file:",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.12",
-    "expo-auth-session": "^5.5.2",
-    "expo-checkbox": "^3.0.0",
-    "expo-font": "~12.0.8",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
-    "expo-secure-store": "~13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "dayjs": "^1.11.13",
+    "dayjs-plugin-utc": "^0.1.2",
+    "expo": "^52.0.23",
+    "expo-auth-session": "~6.0.1",
+    "expo-checkbox": "~4.0.0",
+    "expo-font": "~13.0.2",
+    "expo-linking": "~7.0.3",
+    "expo-router": "^4.0.15",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.18",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.6",
+    "expo-web-browser": "~14.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.52.2",
-    "react-native": "0.74.2",
+    "react-native": "0.76.5",
     "react-native-calendars": "^1.1305.0",
     "react-native-check-box": "^2.1.7",
-    "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
@@ -53,9 +54,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "~52.0.2",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
