--- a/app.json
+++ b/app.json
@@ -22,7 +22,9 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.sergioaguiar.agendacotad",
+      "usesCleartextTraffic": true
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +38,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4f1f0237-4ba5-4d3f-8c20-7b46d82a73d9"
+      }
     }
   }
 }
