--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 GOOGLE_CLIENT_ID = 847118702552-g4jpblqk2kk0mumgf2lo35jvs6motqlb.apps.googleusercontent.com
 GOOGLE_REDIRECT_URI = http://192.168.101.11:3000/auth/google/callback
+
+NODE_ENV=development
