--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -31,6 +31,7 @@
     "expo-build-properties": "~0.13.2",
     "expo-checkbox": "~4.0.0",
     "expo-font": "~13.0.2",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
     "expo-router": "^4.0.15",
     "expo-secure-store": "~14.0.0",
@@ -38,6 +39,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "lucide-react-native": "^0.525.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.2",
@@ -45,7 +47,7 @@
     "react-native-calendars": "^1.1305.0",
     "react-native-check-box": "^2.1.7",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^3.5.2",
@@ -55,9 +57,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
     "@types/react": "~18.3.12",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
+    "react-native-make": "^1.0.1",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
