--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "agenda-cotad",
+  "name": "coordenador-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -21,7 +21,6 @@
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
-    "agenda-cotad": "file:",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
@@ -47,7 +46,7 @@
     "react-native-calendars": "^1.1305.0",
     "react-native-check-box": "^2.1.7",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.18.0",
+    "react-native-reanimated": "3.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-tab-view": "^3.5.2",
