--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "agenda-cotad",
+    "name": "coordenador-app",
     "slug": "coordenador-app",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -17,7 +17,8 @@
       "config": {
         "usesNonExemptEncryption": false,
         "newArchEnabled": true
-      }
+      },
+      "bundleIdentifier": "com.sergioaguiar.coordenadorapp"
     },
     "android": {
       "adaptiveIcon": {
@@ -25,7 +26,7 @@
         "backgroundColor": "#ffffff"
       },
       "softwareKeyboardLayoutMode": "pan",
-      "package": "com.sergioaguiar.agendacotad",
+      "package": "com.sergioaguiar.coordenadorapp",
       "newArchEnabled": true
     },
     "web": {
@@ -44,7 +45,12 @@
             "enableProguardInReleaseBuilds": true
           },
           "ios": {
-            "flipper": false
+            "flipper": false,
+            "infoPlist": {
+              "NSAppTransportSecurity": {
+                "NSAllowsArbitraryLoads": true
+              }
+            }
           }
         }
       ]
