--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,8 +81,11 @@ def enableProguardInReleaseBuilds = (findProperty('android.enableProguardInRelea
 def jscFlavor = 'org.webkit:android-jsc:+'
 
 android {
-    ndkVersion rootProject.ext.ndkVersion
+    kotlinOptions {
+        jvmTarget = "17"
+    }
 
+    ndkVersion rootProject.ext.ndkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
@@ -91,8 +94,8 @@ android {
         applicationId 'com.sergioaguiar.coordenadorapp'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 6
+        versionName "1.0.6"
     }
 
     signingConfigs {
