--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -28,7 +28,7 @@ android.enablePngCrunchInReleaseBuilds=true
 # Use this property to specify which architecture you want to build.
 # You can also override it from the CLI using
 # ./gradlew <task> -PreactNativeArchitectures=x86_64
-reactNativeArchitectures=armeabi-v7a,arm64-v8a
+reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 
 # Use this property to enable support to the new architecture.
 # This will allow you to use TurboModules and the Fabric render in
@@ -55,10 +55,10 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 # Use legacy packaging to compress native libraries in the resulting APK.
 expo.useLegacyPackaging=false
 
+android.compileSdkVersion=35
+android.targetSdkVersion=35
+android.buildToolsVersion=35.0.0
+android.kotlinVersion=1.9.24
 android.enableProguardInReleaseBuilds=true
 android.extraMavenRepos=[]
-
-MYAPP_STORE_FILE=coordenador-app-keystore.jks
-MYAPP_STORE_PASSWORD=38tkF6.9v2km
-MYAPP_KEY_ALIAS=coordenadorapp
-MYAPP_KEY_PASSWORD=38tkF6.9v2km
+android.ndkVersion=26.1.10909125
