--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
+android/gradle.properties.local
+
 # dependencies
 node_modules/
 
