--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
-    "axios": "^1.7.7",
+    "axios": "^1.6.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "dayjs-plugin-utc": "^0.1.2",
@@ -56,8 +56,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@react-native-community/cli": "^18.0.0",
+    "@react-native-community/cli": "^20.1.1",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-native-make": "^1.0.1",
