--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
-    "@expo/vector-icons": "^14.0.0",
+    "@expo/vector-icons": "~14.0.4",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.6.0",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.13",
     "dayjs-plugin-utc": "^0.1.2",
-    "expo": "^52.0.23",
+    "expo": "~52.0.49",
     "expo-auth-session": "~6.0.1",
     "expo-build-properties": "~0.13.2",
     "expo-checkbox": "~4.0.0",
+    "expo-constants": "~17.0.8",
     "expo-font": "~13.0.2",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.3",
@@ -42,13 +43,15 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.52.2",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
     "react-native-calendars": "^1.1305.0",
     "react-native-check-box": "^2.1.7",
+    "react-native-pager-view": "6.5.1",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "3.18.0",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
@@ -58,7 +61,6 @@
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^20.1.1",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.72.8",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-native-make": "^1.0.1",
